# pathtracer

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
src/: camera.h  image.h  main.cpp  material.h  math.h  primitives.h  renderer.h  scene.h
